--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+"scripts": {
+  "start": "nodemon app.js"
+},
+
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
